Remove old files, setup templates for views, queries working

--- a/views/viewRepo.jade
+++ b/views/viewRepo.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
     h1= repo.name
-    h2= repo.owner.login
+    h5= 'By: ' + repo.owner.login
+    p= repo.description
 
 end block
