--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -1,5 +1,5 @@
-a.button(href='/list/restaurants') Restaurants
-a.button(href='/list/doctors') Doctors
-a.button(href='/list/tips') Tips
-a.button(href='/list/users/') Users
-a.button(href='/search/') Search
+a.button(href='/') Home
+br
+a.button(href='/list/repos') Repos
+br
+a.button(href='/list/pulls') Pulls
